# modernbioquest

./: .gitignore  README.md  db_stage_fix.py  package-lock.json  package.json  pdf_to_db_uploader.py  prod_db.sqlite3  pyproject.toml  requirements.txt  test_db.sqlite3  to_db_uploader.py
bioquest/: dropbox_app.py  settings.py
main/: admin.py  configs.py  example.py  models.py  scripts.py  search_index.py  services.py  tests.py  urls.py  views.py
main/db_pickles/: reg_11_2018-2021_parts_1-2.p  reg_parts_1-2_2018.p  reg_parts_1-2_2020.p  zakl2019.p  zakl2021.p  zakl2022.p
main/migrations/: 0001_initial.py  0002_basequestion_title_alter_basequestion_listed.py  0003_alter_basequestion_title.py  0004_alter_basequestion_listed.py  0004_rightanswer_flag_rightanswer_type_and_more.py  0005_remove_basequestion_style_remove_rightanswer_type_and_more.py  0005_remove_question_number_question_number_10_and_more.py  0006_alter_question_options_alter_image_album_and_more.py  0006_alter_rightanswer_options.py  0007_basequestion_max_points_rightanswer_is_right_and_more.py  0007_testquestion.py  0008_remove_rightanswer_is_right_useranswer_is_right.py  0008_test_testquestion_parent_test.py  0009_alter_basequestion_max_points.py  0009_alter_test_options.py  0010_alter_testquestion_options.py  0010_remove_basequestion_max_points.py  0011_alter_rightanswer_options.py  0011_alter_testquestion_options.py  0012_competition_slug.py  (+17 more)
old_site_parsing/: old_db_extractor.ipynb
pdfparsing/: interlab.ipynb  newparser.ipynb  parser.ipynb  parser_dataclasses.py  pdfpumber.ipynb  unpacked.txt
(+21 files in other folders)
