[tool.poetry]
name = "modernbioquest"
version = "0.1.0"
description = "Refactored and redesigned version of my site for collecting questions of biological opympiads"
authors = ["timofeiryko <timofei.rykol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cloudinary = "1.32.0"
confusable-homoglyphs = "3.2.0"
django = "4.1.3"
django-cloudinary-storage = "0.3.0"
django-elasticsearch-dsl = "7.3"
django-nested-admin = "4.0.2"
django-polymorphic = "3.1.0"
django-registration = "3.3"
elasticsearch = "7.13.4"
elasticsearch-dsl = "7.4.1"
gitdb = "4.0.10"
gitpython = "3.1.31"
idna = "3.4"
levenshtein = "0.20.8"
pillow = "9.4.0"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-levenshtein = "0.20.8"
python-monkey-business = "1.0.0"
rapidfuzz = "2.13.7"
requests = "2.28.2"
six = "1.16.0"
smmap = "5.0.0"
sqlparse = "0.4.3"
thefuzz = "0.19.0"
urllib3 = "1.26.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
